--- a/css/base.css
+++ b/css/base.css
@@ -43,3 +43,10 @@ body {
 .unavailable {
     color: var(--c-gray) !important;
 }
+
+
+@media only screen and (max-width: 414px) {
+    .container {
+        padding: 2rem;
+    }
+}
